--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+        <section>
         <p>This is the message</p>
+        <p>This is the second message</p>
+    </section>
     </body>
 </html>
